--- a/app/views/steps/show.html.haml
+++ b/app/views/steps/show.html.haml
@@ -1,3 +1,8 @@
+- if @previous_step
+  = link_to 'Back', journey_step_path(id: @previous_step, journey_id: params[:journey_id]), class: 'govuk-back-link'
+- else
+  = link_to 'Back', journeys_path, class: 'govuk-back-link'
+
 %span.govuk-caption-xl
   Leaving Hospital - Virtual Advisor
 
