--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,10 +1,10 @@
 %h1.govuk-heading-xl
-  Leaving Hospital - Virtual Advisor
+	Find what you need to keep you healthy and independent.
 
 %p.govuk-body-l
-  If you've had a change in circumstance or a stay in hospital, it might be worth thinking about ways to make it easier to stay in and get around your home.
+	We know how difficult it can be to find the right help once you leave hospital. From advice and equipment to help around the home - whatever you need, we’ll try to help you find it.
 
 %p.govuk-body
-  I'd like to ask you a few questions to get you to the right information...
+	We'd like to ask you a few questions to get you to the right information...
 
-%p=link_to 'Get Started', journeys_path, role: :button, draggable: false, class: 'govuk-button govuk-button--start'
+%p=link_to 'Get started', journeys_path, role: :button, draggable: false, class: 'govuk-button govuk-button--start'
