--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -1,5 +1,5 @@
 %span.govuk-caption-xl
-  We’ll ask you five quick questions that’ll help us find the information you need. First things first - step 1 of 4...
+  We’ll ask you a few questions that’ll help us find the information you need. First things first - step 1 of 4
   
 = form_for @response do |f|
 
