--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -5,6 +5,6 @@
 	We know how difficult it can be to find the right help once you leave hospital. From advice and equipment to help around the home - whatever you need, we’ll try to help you find it.
 
 %p.govuk-body
-	We'd like to ask you a few questions to get you to the right information...
+	We'll ask you a few questions to get you to the right information...
 
 %p=link_to 'Get started', journeys_path, role: :button, draggable: false, class: 'govuk-button govuk-button--start'
