Remove full stop

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,5 +1,5 @@
 %h1.govuk-heading-xl
-	Find what you need to keep you healthy and independent.
+	Find what you need to keep you healthy and independent
 
 %p.govuk-body-l
 	We know how difficult it can be to find the right help once you leave hospital. From advice and equipment to help around the home - whatever you need, we’ll try to help you find it.
