Add gov style for whole wrapper so cms all renders gov stylie

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
   </header>
 
   <div class="govuk-width-container">
-    <main class="govuk-main-wrapper " id="main-content" role="main">
+    <main class="govuk-main-wrapper govuk-body" id="main-content" role="main">
       
       <%= yield %>
 
