--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -6,7 +6,7 @@
       %p.govuk-body
         = fragment.content.html_safe
 
-  - help_category_result.children.each do |info_type|
+  - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
     %h2.govuk-heading-m
       = info_type.label
     - info_type.fragments.each do |fragment|
