--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,12 @@
  *= require_tree .
  *= require_self
  */
- 
+
 $govuk-images-path: "/assets/";
 $govuk-fonts-path: "/assets/";
 $govuk-font-url-function: "font-url";
 $govuk-image-url-function: "image-url";
 
 @import "govuk-frontend/all";
+
+@import "remove_gds";
