--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -16,43 +16,45 @@
       = @results["avoid_accidents"][info_type]["title"]
     - else
       = @results["avoid_accidents"][info_type]["title"] + ","
+  .accordion
+    - @response.help_category.each do |help_category|
+      .accord-toggle
+        %h2.govuk-heading-l
+          = @results[help_category]["title"]
+      .accord-cont
+        %p.govuk-body-l
+          - @results[help_category]["consistent_text"].each do | section|
+            - if section["type"] == "paragraph"
+              %p.govuk-body-l
+                = section["content"]
+            - elsif section["type"] == "bullets"
+              %ul.gov-body
+                - section["content"].each do |bullet_point|
+                  %li.govuk-body-l
+                    = bullet_point
+            - elsif section["type"] == "subheading"
+              %h3.govuk-heading-m
+                = section["content"]
 
-  - @response.help_category.each do |help_category|
-    %h2.govuk-heading-l
-      = @results[help_category]["title"]
-    %p.govuk-body-l
-      - @results[help_category]["consistent_text"].each do | section|
-        - if section["type"] == "paragraph"
-          %p.govuk-body-l
-            = section["content"]
-        - elsif section["type"] == "bullets"
-          %ul.gov-body
-            - section["content"].each do |bullet_point|
-              %li.govuk-body-l
-                = bullet_point
-        - elsif section["type"] == "subheading"
-          %h3.govuk-heading-m
-            = section["content"]
-
-    %p.govuk-body
-      - @response.info_type.each do |info_type|
-        - @results[help_category][info_type]["sections"].each do |section|
-          - if section["type"] == "paragraph"
-            %p.govuk-body
-              - section["components"].each do |component|
-                - if component["type"] == "text"
-                  = component["content"]
-                - elsif component["type"] == "hyperlink"
-                  = link_to component["label"], component["url"], target: :_blank, class: "govuk-link govuk-body"
-              = section["content"]
-          - elsif section["type"] == "bullets"
-            %ul.gov-body
-              - section["content"].each do |bullet_point|
-                %li.govuk-body
-                  = bullet_point
-          - elsif section["type"] == "subheading"
-            %p.govuk-heading-m
-              = section["content"]
+        %p.govuk-body
+          - @response.info_type.each do |info_type|
+            - @results[help_category][info_type]["sections"].each do |section|
+              - if section["type"] == "paragraph"
+                %p.govuk-body
+                  - section["components"].each do |component|
+                    - if component["type"] == "text"
+                      = component["content"]
+                    - elsif component["type"] == "hyperlink"
+                      = link_to component["label"], component["url"], target: :_blank, class: "govuk-link govuk-body"
+                  = section["content"]
+              - elsif section["type"] == "bullets"
+                %ul.gov-body
+                  - section["content"].each do |bullet_point|
+                    %li.govuk-body
+                      = bullet_point
+              - elsif section["type"] == "subheading"
+                %p.govuk-heading-m
+                  = section["content"]
 
 %h2.govuk-heading-l
   Need more help?
