--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -16,17 +16,19 @@
       = @help_category_results.first.children.where(slug: info_type).first.label
     - else
       = @help_category_results.first.children.where(slug: info_type).first.label + ","
-
-- @help_category_results.each do |help_category_result|
-  %h2.govuk-heading-l
-    = help_category_result.label
-  %p.govuk-body
-    - help_category_result.fragments.each do |fragment|
+.accordion
+  - @help_category_results.each do |help_category_result|
+    .accord-toggle
+      %h2.govuk-heading-l
+        = help_category_result.label
+    .accord-cont
       %p.govuk-body
-        = fragment.content.html_safe
+        - help_category_result.fragments.each do |fragment|
+          %p.govuk-body
+            = fragment.content.html_safe
 
-  - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
-    %h2.govuk-heading-m
-      = info_type.label
-    - info_type.fragments.each do |fragment|
-      = fragment.content.html_safe
+      - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
+        %h2.govuk-heading-m
+          = info_type.label
+        - info_type.fragments.each do |fragment|
+          = fragment.content.html_safe
