--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -10,7 +10,7 @@
       = help_category_result.label + ","
 %p.govuk-body-l
   %strong
-    And:
+    You were most interested in:
   - @info_types.each do |info_type|
     - if @info_types.last == info_type
       = @help_category_results.first.children.where(slug: info_type).first.label
@@ -18,17 +18,20 @@
       = @help_category_results.first.children.where(slug: info_type).first.label + ","
 
   - @help_category_results.each do |help_category_result|
-    %h2.govuk-heading-l
-      = help_category_result.label
-    %p.govuk-body
-      - help_category_result.fragments.each do |fragment|
-        %p.govuk-body
-          = fragment.content.html_safe
-    .accordion
-      - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
-        .accord-toggle
-          %h2.govuk-heading-m
-            = info_type.label
-        .accord-cont
-          - info_type.fragments.each do |fragment|
+    .single_category
+      %h2.govuk-heading-l
+        = help_category_result.label
+      %p.govuk-body
+        - help_category_result.fragments.each do |fragment|
+          %p.govuk-body
             = fragment.content.html_safe
+      .accordion
+        - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
+          .accord-single
+            .accord-toggle
+              %h2.govuk-heading-m
+                = info_type.label
+                =fa_icon 'chevron-down'
+            .accord-cont
+              - info_type.fragments.each do |fragment|
+                = fragment.content.html_safe
