--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -35,3 +35,13 @@
             .accord-cont
               - info_type.fragments.each do |fragment|
                 = fragment.content.html_safe
+        - more_help = help_category_result.children.where(slug: 'more_help').first
+        - unless more_help.fragments.count == 1 && more_help.fragments.first.content == ""
+          .accord-single
+            .accord-toggle
+              %h2.govuk-heading-m
+                More help
+                =fa_icon 'chevron-down'
+            .accord-cont
+              - more_help.fragments.each do |fragment|
+                = fragment.content.html_safe
