--- a/app/assets/stylesheets/remove_gds.scss
+++ b/app/assets/stylesheets/remove_gds.scss
@@ -39,7 +39,8 @@ footer {
 }
 
 .single_category {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 
 .turbolinks-progress-bar {
