--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -47,6 +47,17 @@
                 = fragment.content.html_safe
     %hr
 
+.save_for_later
+  %h2.govuk-heading-l
+    Want to save this for later?
+  Just give us your phone number and we'll send you a link to these results
+
+  = form_for response_send_results_sms_path(@response) do |f|
+    .govuk-form-group
+      = f.label :phone_number, class: 'govuk-label', for: 'width-10'
+      = f.telephone_field :phone_number, class: 'govuk-input govuk-input--width-10', name: "width-10"
+      = f.submit "Send", class: 'govuk-button'
+
 %h2.govuk-heading-l
   = @results.where(slug: 'more_help_generic').first.label
 - @results.where(slug: 'more_help_generic').first.fragments.each do |fragement|
