--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,10 +1,7 @@
 %h1.govuk-heading-xl
-	Find what you need to keep you healthy and independent
+	= @welcome_page.label
 
-%p.govuk-body-l
-	We know how difficult it can be to find the right help once you leave hospital. From advice and equipment to help around the home - whatever you need, we’ll try to help you find it.
-
-%p.govuk-body-l
-	We'll ask you a few questions to get you to the right information...
+- @welcome_page.fragments.each do |fragment|
+	= fragment.content.html_safe
 
 %p=link_to 'Get started', journeys_path, role: :button, draggable: false, class: 'govuk-button govuk-button--start'
