Remove gov border from header and change header colour. Add border radius to inputs

--- a/app/assets/stylesheets/remove_gds.scss
+++ b/app/assets/stylesheets/remove_gds.scss
@@ -13,6 +13,14 @@ footer {
 }
 .govuk-header__container {
   border-color: $brand;
+  border: none;
+  padding-bottom: 10px;
+}
+.govuk-header {
+  background: $brand;
+}
+.govuk-input {
+  border-radius: 10px;
 }
 .govuk-button {
   background: $brand;
