Put send results button in separate form group

--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -59,6 +59,7 @@
     .govuk-form-group
       = f.label :phone_number, class: 'govuk-label', for: 'width-10'
       = f.telephone_field :phone_number, class: 'govuk-input govuk-input--width-10'
+    .govuk-form-group
       = f.submit "Send", class: 'govuk-button'
 
 %h2.govuk-heading-l
