Update first question page accordingly

--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -1,5 +1,7 @@
 %span.govuk-caption-xl
-  We’ll ask you a few questions that’ll help us find the information you need. First things first - step 1 of 4
+  Step 1 of 4
+%span.govuk-caption-l
+  We’ll ask you a few questions that’ll help us find the information you need.
 
 = form_for @response do |f|
   = hidden_field_tag :next_step, @next_step
