--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
       <div class="govuk-header__logo">
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
           <span class="govuk-header__logotype">
+            <%= image_tag("EssexIcon-150px.png", class: 'essex-logo') %>
             <span class="govuk-header__logotype-text">
               Home and healthy
             </span>
