--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -17,6 +17,8 @@
             = f.radio_button :category, k, 'aria-describedby' => "#{k}-item-hint", class: 'govuk-radios__input'
             %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
             %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
+            - if k == 'not_sure'
+              = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10'
 
     %p
       = submit_tag 'Save and continue', class: 'govuk-button'
