--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -14,11 +14,11 @@
       .govuk-radios
         - @questions.each do |k, q|
           .govuk-radios__item.verticle_align
-            = f.radio_button :category, k, 'aria-describedby' => "#{k}-item-hint", class: 'govuk-radios__input'
+            = f.radio_button :category, k, 'aria-describedby' => "#{k}-item-hint", class: "govuk-radios__input #{'display_hidden' if k == 'not_sure'}"
             %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
             %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
             - if k == 'not_sure'
-              = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10'
+              = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10 hidden_field'
 
     %p
       = submit_tag 'Save and continue', class: 'govuk-button'
