--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -63,17 +63,22 @@
   .save_for_later
     %h2.govuk-heading-l
       Want to save this for later?
-    Just give us your phone number and we'll send you a link to these results
+    Type your phone number in the box below and we'll send you a link to these results
+    %span.govuk-hint
+      We won't use this information for anything else.
 
     = form_for @response, url: response_send_results_sms_path(@response.id), method: :patch do |f|
       .govuk-form-group
-        = f.label :phone_number, class: 'govuk-label', for: 'width-10'
         = f.telephone_field :phone_number, class: 'govuk-input govuk-input--width-10 '
       .govuk-form-group
         = f.submit "Send", class: 'govuk-button'
 
-- if @response.category == 'not_sure' && @response.suggested_category
-  Unfortunately we don't have any information on '#{@response.suggested_category}'
+- if @response.category == 'not_sure'
+  %h2.govuk-heading-l
+    We’re sorry you couldn’t find what you were looking for
+  %p
+    We’re sorry you can’t find what you’re looking for right now.
+  If you want to talk to your Navigator face to face about this, you can contact them on:
 
 %h2.govuk-heading-l
   = @results.where(slug: 'more_help_generic').first.label
