--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -19,7 +19,7 @@
         .govuk-radios
           - @questions.each do |k, q|
             .govuk-radios__item.verticle_align
-              = f.radio_button :category, k, 'aria-describedby' => "#{k}-item-hint", class: "govuk-radios__input #{'display_hidden' if k == 'not_sure'}"
+              = f.radio_button :category, k, 'aria-describedby' => "#{k}-item-hint", class: "govuk-radios__input #{'display_hidden_radio' if k == 'not_sure'}"
               %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
               %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
               - if k == 'not_sure'
