--- a/app/views/responses/new.html.haml
+++ b/app/views/responses/new.html.haml
@@ -1,12 +1,7 @@
-%h1.govuk-heading-xl
+%span.govuk-caption-xl
+  Step 1 of 4
+%h1.govuk-heading-l
   Before we begin: what's your name?
-%h2.govuk-heading-l
-  Why do we need this?
-%p.govuk-body
-  We use your name to share your answers with your Navigator.
-  This is so they can talk to you face to face about your options.
-
-
 %span.govuk-hint
   We won't share this information with anyone else.
 
@@ -33,3 +28,9 @@
       = f.text_field :surname, class: 'govuk-input govuk-input--width-10'
     .govuk-form-group
       = f.submit "Continue", class: 'govuk-button'
+
+%h2.govuk-heading-m
+  Why do we need this?
+%p.govuk-body
+  We use your name to share your answers with your Navigator.
+  This is so they can talk to you face to face about your options.
