--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -11,7 +11,7 @@
         = help_category_result.label + ","
 
   - if @response.help_category.include? 'something_else'
-    %span.govuk-info
+    %p.govuk-info
       You also chose '#{@response.suggested_help_category}'
 
   %p.govuk-body-l
@@ -24,7 +24,7 @@
         = @help_category_results.first.children.where(slug: info_type).first.label + ","
 
   - if @response.info_type.include? 'something_else'
-    %span.govuk-info
+    %p.govuk-info
       You were also interested in '#{@response.suggested_info_type}'
 
     %hr
@@ -75,10 +75,11 @@
 
 - if @response.category == 'not_sure'
   %h2.govuk-heading-l
-    We’re sorry you couldn’t find what you were looking for
+    We’re sorry we can’t find what you’re looking for
   %p
     We’re sorry you can’t find what you’re looking for right now.
-  If you want to talk to your Navigator face to face about this, you can contact them on:
+  %p
+    If you want to talk to your Navigator face to face about this, you can contact them on:
 
 %h2.govuk-heading-l
   = @results.where(slug: 'more_help_generic').first.label
