--- a/app/views/journeys/index.html.haml
+++ b/app/views/journeys/index.html.haml
@@ -1,6 +1,6 @@
 
 #firstQuestion
-  %span.govuk-caption-xl
+  %span.govuk-caption-l
     Step 2 of 4
   %span.govuk-caption-l
     We’ll ask you a few questions that’ll help us find the information you need.
@@ -8,14 +8,14 @@
 
   = form_for @response, class: 'validation' do |f|
     = hidden_field_tag :next_step, @next_step
-    .form_errors.display_none
-      %h4 Please select an option to continue
 
     .govuk-form-group
       %fieldset.govuk-fieldset{"aria-describedby" => "sign-in-hint"}
-        %legend.govuk-fieldset__legend.govuk-fieldset__legend--xl
+        %legend.govuk-fieldset__legend.govuk-fieldset__legend--l
           %h1.govuk-fieldset__heading
             Choose a statement that best describes what you want to do
+        .form_errors.display_none
+          %h4 Please select an option to continue
         .govuk-radios
           - @questions.each do |k, q|
             .govuk-radios__item.verticle_align
@@ -23,7 +23,7 @@
               %label.govuk-label.govuk-radios__label.govuk-label--s{for: "response_category_#{k}"}= q['title']
               %span.govuk-hint.govuk-radios__hint{id: "#{k}-item-hint"}= q['hint']
               - if k == 'not_sure'
-                = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10 hidden_field'
+                = f.text_field :suggested_category, class: 'govuk-input govuk-input--width-10 hidden_field', placeholder: 'Add optional details'
 
         %p
           = submit_tag 'Save and continue', class: 'govuk-button'
