--- a/app/views/responses/show.html.haml
+++ b/app/views/responses/show.html.haml
@@ -10,34 +10,48 @@
       - else
         = help_category_result.label + ","
 
-  - if @response.help_category.include? 'something_else'
+  - if @response.help_category.include? 'something_else' && @response.suggested_help_category
     %p.govuk-info
       You also chose '#{@response.suggested_help_category}'
 
-  %p.govuk-body-l
-    %strong
-      You were most interested in:
-    - @info_types.each do |info_type|
-      - if @info_types.last == info_type
-        = @help_category_results.first.children.where(slug: info_type).first.label
-      - else
-        = @help_category_results.first.children.where(slug: info_type).first.label + ","
+  - if @response.info_type == ['something_else']
+    We're sorry we don't have the type of information that you are looking for. Below is all of the the information that we do have for your choices.
+  - else
+    %p.govuk-body-l
+      %strong
+        You were most interested in:
+      - @info_types.each do |info_type|
+        - if @info_types.last == info_type
+          = @help_category_results.first.children.where(slug: info_type).first.label
+        - else
+          = @help_category_results.first.children.where(slug: info_type).first.label + ","
 
-  - if @response.info_type.include? 'something_else'
+  - if @response.info_type.include? 'something_else' && @response.suggested_info_type
     %p.govuk-info
       You were also interested in '#{@response.suggested_info_type}'
 
     %hr
 
-    - @help_category_results.each do |help_category_result|
-      .single_category
-        %h2.govuk-heading-l
-          = help_category_result.label
-        %p.govuk-body
-          - help_category_result.fragments.each do |fragment|
-            %p.govuk-body
-              = fragment.content.html_safe
-        .accordion
+  - @help_category_results.each do |help_category_result|
+    .single_category
+      %h2.govuk-heading-l
+        = help_category_result.label
+      %p.govuk-body
+        - help_category_result.fragments.each do |fragment|
+          %p.govuk-body
+            = fragment.content.html_safe
+      .accordion
+        - if @response.info_type == ['something_else']
+          - help_category_result.children.each do |info_type|
+            .accord-single
+              .accord-toggle
+                %h2.govuk-heading-m
+                  = info_type.label
+                  =fa_icon 'chevron-down'
+              .accord-cont
+                - info_type.fragments.each do |fragment|
+                  = fragment.content.html_safe
+        - else
           - help_category_result.children.where(slug: @response["info_type"]).each do |info_type|
             .accord-single
               .accord-toggle
@@ -47,18 +61,19 @@
               .accord-cont
                 - info_type.fragments.each do |fragment|
                   = fragment.content.html_safe
-          - more_help = help_category_result.children.where(slug: 'more_help').first
-          - unless more_help.fragments.count == 1 && more_help.fragments.first.content == ""
-            .accord-single
-              .accord-toggle
-                %h2.govuk-heading-m
-                  More help
-                  =fa_icon 'chevron-down'
-              .accord-cont
-                - more_help.fragments.each do |fragment|
-                  = fragment.content.html_safe
-      - unless help_category_result == @help_category_results.last
-        %hr
+
+        - more_help = help_category_result.children.where(slug: 'more_help').first
+        - unless more_help.fragments.count == 1 && more_help.fragments.first.content == ""
+          .accord-single
+            .accord-toggle
+              %h2.govuk-heading-m
+                More help
+                =fa_icon 'chevron-down'
+            .accord-cont
+              - more_help.fragments.each do |fragment|
+                = fragment.content.html_safe
+    - unless help_category_result == @help_category_results.last
+      %hr
 
   .save_for_later
     %h2.govuk-heading-l
